Fix ASCII box alignment in summary slide, add RAG layer

--- a/index.html
+++ b/index.html
@@ -1218,22 +1218,24 @@ Tools: LangSmith, Weights & Biases, Datadog, custom traces</code></pre>
             <section id="summary">
                 <section>
                     <h2>The Complete Stack</h2>
-                    <pre><code>┌─────────────────────────────────────────────────────┐
-│  APPLICATIONS                                        │
-│  Conversational Commerce, Predictive Shopping        │
-├─────────────────────────────────────────────────────┤
-│  AGENT FRAMEWORKS                                    │
-│  Google ADK, OpenClaw, LangChain                    │
-├─────────────────────────────────────────────────────┤
-│  TOOL PROTOCOL: MCP                                 │
-├─────────────────────────────────────────────────────┤
-│  LARGE LANGUAGE MODELS                              │
-│  GPT-4, Claude, Gemini, Llama                       │
-├─────────────────────────────────────────────────────┤
-│  TRANSFORMER ARCHITECTURE                           │
-├─────────────────────────────────────────────────────┤
-│  DEEP LEARNING FUNDAMENTALS                         │
-└─────────────────────────────────────────────────────┘</code></pre>
+                    <pre><code>┌───────────────────────────────────────────┐
+│  APPLICATIONS                             │
+│  Conversational Commerce, Predictive      │
+├───────────────────────────────────────────┤
+│  AGENT FRAMEWORKS                         │
+│  Google ADK, OpenClaw, LangChain          │
+├───────────────────────────────────────────┤
+│  RETRIEVAL: RAG + Graph-RAG               │
+├───────────────────────────────────────────┤
+│  TOOL PROTOCOL: MCP                       │
+├───────────────────────────────────────────┤
+│  LARGE LANGUAGE MODELS                    │
+│  GPT-4, Claude, Gemini, Llama             │
+├───────────────────────────────────────────┤
+│  TRANSFORMER ARCHITECTURE                 │
+├───────────────────────────────────────────┤
+│  DEEP LEARNING FUNDAMENTALS               │
+└───────────────────────────────────────────┘</code></pre>
                 </section>
 
                 <section>
