Replace ASCII stack diagram with styled CSS gradient layers

--- a/index.html
+++ b/index.html
@@ -1218,24 +1218,36 @@ Tools: LangSmith, Weights & Biases, Datadog, custom traces</code></pre>
             <section id="summary">
                 <section>
                     <h2>The Complete Stack</h2>
-                    <pre><code>┌───────────────────────────────────────────┐
-│  APPLICATIONS                             │
-│  Conversational Commerce, Predictive      │
-├───────────────────────────────────────────┤
-│  AGENT FRAMEWORKS                         │
-│  Google ADK, OpenClaw, LangChain          │
-├───────────────────────────────────────────┤
-│  RETRIEVAL: RAG + Graph-RAG               │
-├───────────────────────────────────────────┤
-│  TOOL PROTOCOL: MCP                       │
-├───────────────────────────────────────────┤
-│  LARGE LANGUAGE MODELS                    │
-│  GPT-4, Claude, Gemini, Llama             │
-├───────────────────────────────────────────┤
-│  TRANSFORMER ARCHITECTURE                 │
-├───────────────────────────────────────────┤
-│  DEEP LEARNING FUNDAMENTALS               │
-└───────────────────────────────────────────┘</code></pre>
+                    <div class="stack-diagram">
+                        <div class="stack-layer" style="background: linear-gradient(135deg, rgba(0,217,255,0.3), rgba(56,239,125,0.3)); border-color: var(--color-accent-6);">
+                            <strong>Applications</strong>
+                            <span>Conversational Commerce, Predictive Shopping</span>
+                        </div>
+                        <div class="stack-layer" style="background: linear-gradient(135deg, rgba(56,239,125,0.25), rgba(142,84,233,0.25)); border-color: var(--color-accent-1);">
+                            <strong>Agent Frameworks</strong>
+                            <span>Google ADK, OpenClaw, LangChain</span>
+                        </div>
+                        <div class="stack-layer" style="background: linear-gradient(135deg, rgba(142,84,233,0.25), rgba(255,106,0,0.25)); border-color: var(--color-accent-3);">
+                            <strong>Retrieval</strong>
+                            <span>RAG + Graph-RAG + Knowledge Graphs</span>
+                        </div>
+                        <div class="stack-layer" style="background: linear-gradient(135deg, rgba(255,106,0,0.25), rgba(255,88,88,0.25)); border-color: var(--color-accent-2);">
+                            <strong>Tool Protocol</strong>
+                            <span>MCP (Model Context Protocol)</span>
+                        </div>
+                        <div class="stack-layer" style="background: linear-gradient(135deg, rgba(255,88,88,0.2), rgba(58,123,213,0.2)); border-color: var(--color-accent-4);">
+                            <strong>Large Language Models</strong>
+                            <span>GPT-4, Claude, Gemini, Llama</span>
+                        </div>
+                        <div class="stack-layer" style="background: linear-gradient(135deg, rgba(58,123,213,0.2), rgba(100,100,140,0.2)); border-color: var(--color-accent-5);">
+                            <strong>Transformer Architecture</strong>
+                            <span>Attention, embeddings, tokenization</span>
+                        </div>
+                        <div class="stack-layer" style="background: rgba(60,60,80,0.4); border-color: #666;">
+                            <strong>Deep Learning Fundamentals</strong>
+                            <span>Neural networks, backpropagation, optimization</span>
+                        </div>
+                    </div>
                 </section>
 
                 <section>
