Replace estimated figures with sourced industry data
Sources:
- Zendesk CX Trends Report 2026
- Forrester Customer Obsession Report 2024
- Deloitte Digital Personalization Study
- Salesforce State of AI Connected Customer

Key stats now properly cited:
- 81% believe AI is part of modern service (Zendesk)
- 75% will spend more with good CX (Zendesk)
- 51% prefer bots for immediate service (Zendesk)
- 41% faster revenue growth for customer-obsessed orgs (Forrester)
- 71% improved loyalty from personalization (Deloitte)

--- a/business.html
+++ b/business.html
@@ -89,25 +89,26 @@
                     <h2>Consumer Expectations Are Shifting</h2>
                     <div class="grid-3">
                         <div class="grid-item">
-                            <p class="emoji-md">🗣️</p>
-                            <h4>Voice/Chat</h4>
-                            <p>40% of Gen Z prefers chat over search</p>
+                            <p class="emoji-md">🤖</p>
+                            <h4>AI-Ready</h4>
+                            <p>81% believe AI is part of modern service¹</p>
                         </div>
                         <div class="grid-item">
                             <p class="emoji-md">⚡</p>
-                            <h4>Speed</h4>
-                            <p>Expect tasks done, not just answered</p>
+                            <h4>Instant</h4>
+                            <p>51% prefer bots for immediate service¹</p>
                         </div>
                         <div class="grid-item">
                             <p class="emoji-md">🎯</p>
                             <h4>Personal</h4>
-                            <p>"Know me" is the new baseline</p>
+                            <p>76% expect personalization¹</p>
                         </div>
                     </div>
                     <br>
                     <div class="quote">
-                        Customers increasingly expect AI that acts on their behalf, not AI they have to operate.
+                        60% have purchased from a brand solely based on the service they expect to receive.
                     </div>
+                    <p class="text-subtle">¹ Zendesk CX Trends Report 2026</p>
                 </section>
 
                 <section>
@@ -213,38 +214,37 @@
                     <h2>Primary Value Drivers</h2>
                     <div class="grid-2">
                         <div class="stat-box">
-                            <div class="stat-number">↑ 35%</div>
-                            <div class="stat-label">Basket Size<br><span class="text-subtle">Agent suggests complete solutions</span></div>
+                            <div class="stat-number">75%</div>
+                            <div class="stat-label">Will Spend More<br><span class="text-subtle">with good CX¹</span></div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-number">↓ 50%</div>
-                            <div class="stat-label">Time to Order<br><span class="text-subtle">15 min → &lt;5 min</span></div>
+                            <div class="stat-number">51%</div>
+                            <div class="stat-label">Better Retention<br><span class="text-subtle">Customer-obsessed orgs²</span></div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-number">↑ 2x</div>
-                            <div class="stat-label">Order Frequency<br><span class="text-subtle">Lower friction = more purchases</span></div>
+                            <div class="stat-number">41%</div>
+                            <div class="stat-label">Faster Revenue Growth<br><span class="text-subtle">Customer-obsessed orgs²</span></div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-number">↓ 40%</div>
-                            <div class="stat-label">Support Tickets<br><span class="text-subtle">Agent handles common questions</span></div>
+                            <div class="stat-number">71%</div>
+                            <div class="stat-label">Improved Loyalty<br><span class="text-subtle">Personalization leaders³</span></div>
                         </div>
                     </div>
-                    <p class="text-muted">Based on early conversational commerce pilots</p>
+                    <p class="text-subtle">¹ Zendesk 2026 &nbsp; ² Forrester 2024 &nbsp; ³ Deloitte Digital</p>
                 </section>
 
                 <section>
                     <h2>Success Metrics Framework</h2>
                     <table>
-                        <tr><th>Category</th><th>Metric</th><th>Target</th></tr>
-                        <tr><td rowspan="2">Engagement</td><td>Agent interaction rate</td><td>30% of sessions</td></tr>
-                        <tr><td>Task completion rate</td><td>>85%</td></tr>
-                        <tr><td rowspan="2">Commerce</td><td>Agent-assisted revenue share</td><td>20% of digital</td></tr>
-                        <tr><td>Basket size lift</td><td>+25%</td></tr>
-                        <tr><td rowspan="2">Efficiency</td><td>Support deflection</td><td>40% reduction</td></tr>
-                        <tr><td>Time to checkout</td><td>-50%</td></tr>
-                        <tr><td rowspan="2">Retention</td><td>90-day repeat rate</td><td>+15pts vs control</td></tr>
-                        <tr><td>NPS (agent users)</td><td>+20pts vs control</td></tr>
+                        <tr><th>Category</th><th>Metric</th><th>Industry Benchmark</th></tr>
+                        <tr><td rowspan="2">AI Effectiveness</td><td>Bot resolution (simple issues)</td><td>80% find helpful¹</td></tr>
+                        <tr><td>AI issue resolution (projected)</td><td>80% without human²</td></tr>
+                        <tr><td rowspan="2">Customer Impact</td><td>Spend increase (good CX)</td><td>75% will spend more¹</td></tr>
+                        <tr><td>Purchase based on expected service</td><td>60% have done this¹</td></tr>
+                        <tr><td rowspan="2">Retention</td><td>Churn after bad experience</td><td>50%+ switch after 1 bad exp¹</td></tr>
+                        <tr><td>Loyalty lift (personalization)</td><td>71% more likely³</td></tr>
                     </table>
+                    <p class="text-subtle">¹ Zendesk 2026 &nbsp; ² Zendesk CX Trendsetters &nbsp; ³ Deloitte Digital</p>
                 </section>
 
                 <section>
@@ -262,15 +262,15 @@
                         <div class="success-box">
                             <h4>Returns</h4>
                             <ul>
-                                <li>Increased basket size</li>
-                                <li>Higher order frequency</li>
-                                <li>Reduced support costs</li>
-                                <li>Lower cart abandonment</li>
+                                <li>75% of customers spend more with good CX¹</li>
+                                <li>41% faster revenue growth²</li>
+                                <li>51% better customer retention²</li>
+                                <li>90% report positive ROI on AI tools³</li>
                             </ul>
                         </div>
                     </div>
                     <br>
-                    <p class="text-accent">Inference costs are dropping ~50% per year while capability increases</p>
+                    <p class="text-subtle">¹ Zendesk 2026 &nbsp; ² Forrester 2024 &nbsp; ³ Zendesk CX Trendsetters</p>
                 </section>
             </section>
 
