Add landing page, make repo public, rebrand as portfolio piece
- Landing page with bio, contact links, CTA
- README with full overview and contact info
- Renamed index.html → technical.html
- Landing page is now the default index
- Links: LinkedIn, GitHub, Discord, Telegram

--- a/business.html
+++ b/business.html
@@ -19,7 +19,7 @@
                 <p class="text-muted">The leadership perspective on AI-driven retail transformation</p>
                 <div class="nav-pills">
                     <a href="overview.html">📋 Overview</a>
-                    <a href="index.html">🔧 Technical</a>
+                    <a href="technical.html">🔧 Technical</a>
                     <span class="active">🏢 Business</span>
                 </div>
             </section>
@@ -549,7 +549,7 @@
                     <p class="emoji-lg">🦞</p>
                     <h2>Questions & Discussion</h2>
                     <br>
-                    <p class="text-muted">Technical deep-dive: <code>index.html</code></p>
+                    <p class="text-muted">Technical deep-dive: <code>technical.html</code></p>
                     <p class="text-muted">High-level overview: <code>overview.html</code></p>
                 </section>
             </section>
