--- a/overview.html
+++ b/overview.html
@@ -19,7 +19,7 @@
                 <p class="text-muted">A high-level journey from neural networks to autonomous shopping</p>
                 <div class="nav-pills">
                     <span class="active">📋 Overview</span>
-                    <a href="index.html">🔧 Technical</a>
+                    <a href="technical.html">🔧 Technical</a>
                     <a href="business.html">🏢 Business</a>
                 </div>
             </section>
@@ -403,7 +403,7 @@
                     <p class="emoji-lg">🦞</p>
                     <h2>Questions?</h2>
                     <br>
-                    <p class="text-muted">Deep dive available in <code>index.html</code></p>
+                    <p class="text-muted">Deep dive available in <code>technical.html</code></p>
                     <p class="text-muted">Business strategy: <code>business.html</code></p>
                 </section>
             </section>
