--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             max-width: 900px;
             margin: 0 auto;
             padding: 60px 24px;
+            border-left: 1px solid #3a4060;
+            border-right: 1px solid #3a4060;
         }
         
         .hero {
