Revert "Let's Connect links to email"
This reverts commit d29d431aa7abea5d758e105c0339a1b31a0d1bfb.

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <h2>Need AI Strategy Consulting?</h2>
             <p>I help companies navigate the transition to agentic AI — from architecture to implementation.</p>
             <div class="contact-links">
-                <a href="mailto:codeninja@gmail.com" class="contact-link">
+                <a href="https://linkedin.com/in/dallaspool" class="contact-link" target="_blank">
                     Let's Connect →
                 </a>
             </div>
