Add email to contact links

--- a/index.html
+++ b/index.html
@@ -314,6 +314,9 @@
                 <a href="https://t.me/codeninja" class="contact-link" target="_blank">
                     ✈️ Telegram
                 </a>
+                <a href="mailto:codeninja@gmail.com" class="contact-link">
+                    ✉️ Email
+                </a>
             </div>
         </div>
         
