Replace HEB branding with generic GroceryCo

--- a/overview.html
+++ b/overview.html
@@ -338,7 +338,7 @@
                 </section>
 
                 <section>
-                    <h2>Real Example: Claw + HEB</h2>
+                    <h2>Real Example: Claw + GroceryCo</h2>
                     <div class="box">
                         <p><strong>Dallas:</strong> "Plan dinners for the week, two people, ~$100"</p>
                         <br>
@@ -350,7 +350,7 @@
                             <li>Total: $96.72</li>
                         </ul>
                         <br>
-                        <p class="text-muted">Using browser automation on HEB.com — this actually happened</p>
+                        <p class="text-muted">Using browser automation on GroceryCo.com — this actually happened</p>
                     </div>
                 </section>
 
